--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <header class="header">
         <div class="container header-content">
             <div class="logo">
-                <img src="images/logo-2.219644d0.png" alt="Sinai University Logo" width="50" height="50">
+                <img src="logo-2.219644d0.png" alt="Sinai University Logo" width="50" height="50">
                 <div class="logo-text">
                     <h1>Sinai University</h1>
                     <p>UniCode Portal</p>
