--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
 
     <main class="main-content container">
         <div class="slider">
-            <img src="images/slider_image_1.jpg" alt="Campus View 1" class="active" loading="eager">
-            <img src="images/slider_image_2.jpg" alt="Campus View 2" loading="lazy">
-            <img src="images/slider_image_3.jpg" alt="Campus View 3" loading="lazy">
+            <img src="slider_image_1.jpg" alt="Campus View 1" class="active" loading="eager">
+            <img src="slider_image_2.jpg" alt="Campus View 2" loading="lazy">
+            <img src="slider_image_3.jpg" alt="Campus View 3" loading="lazy">
         </div>
 
         <section class="card welcome-section">
